--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "handlebars": "^4.1.2",
         "js-yaml": "^3.13.1",
         "marked": "^0.6.2",
+        "mixin-deep": "^1.3.2",
+        "set-value": "^2.0.1",
         "tar": "^4.4.8"
     },
     "config": {
